# ChangeLog for dev-python/aniso8601
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/aniso8601/ChangeLog,v 1.2 2014/06/21 22:58:34 floppym Exp $

  21 Jun 2014; Mike Gilbert <floppym@gentoo.org> aniso8601-0.82.ebuild:
  Depend on setuptools.

*aniso8601-0.82 (08 May 2014)

  08 May 2014; Tim Harder <radhermit@gentoo.org> +aniso8601-0.82.ebuild,
  +metadata.xml:
  Initial import.