@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST aniso8601-0.82.tar.gz 64186 SHA256 e33ffc4ff6882e6a318c07844e346cd6160abe2f48cc2e797d2fe5f36364789e SHA512 7b43f0d6284b55f4a56d376f1898c8375336f7c66ddda3fc35766409feae80b5d9e0d86667204fbc896195ab625233d0207eefe52c110a52d79acf07378e55fc WHIRLPOOL 895ef0c4e5d00f142376db3a40200775ed9e1fbe509b82bec279a79c82374afdeb8da7d2f5e5e7720ec2c892d498f61538f977ae8cc806e62472d01f66fd5583
+DIST aniso8601-0.83.tar.gz 58487 SHA256 1153cfe2599da556c6ce664b12c0e39659340cc6633a316b34eaac480f276429 SHA512 393bbc59dfad69be4224c1149fdfd305486188aae14336b065791e994c50719ba163ba7a701fc785a25ff983861242a8d171a39139f4d475c002f4f4b8405761 WHIRLPOOL f32edfa8d52c820d466322b7b1a4e1cd1d5514276fe7c4cbf529453d4015b1608abd507a199b5079fb36fcb7f0c070675384677877649bb0da51c1249f85d818
 EBUILD aniso8601-0.82.ebuild 766 SHA256 2dd097c6f029dd70f5c793460aa3221f8cd43495186a24da6ef6c3e97369c1cf SHA512 510995ed3b4fa8ecf5f12c111e5ac1b55e213c2c6e1972fa90f46096cd5bd6427d97e61564cbebdb3a426d7cca69e9c9c4653d05b552d1cb1715e9b48c7f3802 WHIRLPOOL c0ccc05dd02d9ba3c6199f76ffb56345bde83ebd6a06178c76b2037b9e445126e1c677a69e8747d3ae88069cc931d7b07c01678495bc8552925ddefe224bd7b9
-MISC ChangeLog 450 SHA256 e3bdffc2e1839b48159207bbe50593ab140b9b6dd0167c4bc97aa03350bfa588 SHA512 153c73dd455cc106628073a27cdc68b4a0f9db6dc09dc6fee93b832f17e904758803106596cbf119fa0fdc48ce50924f9333cba2aaa0cb729bf1b04d114fcd60 WHIRLPOOL 921593620f6c0185afd2d22df4c5fd681c347f3cf75b084386f76014dfa151e5d654a1cfc05c568da762f3c179ccc7c55d0dfb8cd51459a6a12b3f11f501e7db
+EBUILD aniso8601-0.83.ebuild 771 SHA256 9bc5ac0ef15b3d27d44330667d514e0eb4f3b1a68cb739fdc106660aef877159 SHA512 a7e8b9b9a2008019d476d9567b5c4ff15d6b91fe85dcdeb4a7ae7d48cc953f3c27554dbb2e7b5a0b5c3f1dad085fee96343c0253e778709dc3c3527ec964cee5 WHIRLPOOL 26cc2e3928d9b78e642d6cbf90c4154f7fa5661659fd8b9c46c058b2a6b836ff99aefd10f29042d900e7e674b9bec3f9c08400245e95f22363cb9db37c2bd2f8
+MISC ChangeLog 571 SHA256 8f808008e9bff1a1ef7efbc976f68e8993ffb8975e110301304bc10e0c1a0f36 SHA512 558263f18b891d8173f06e857503ad067d38822500a85d50994c4e1af535f1d93592b906f38aa7d963704886c15dc90597da8e9a5f049e69221e734625960a87 WHIRLPOOL a49cc5b7dc6a2814940900e1a5354f77c22e7f34e001b30a24f5487615070921b267e228545354383f80b3d2944be25f9828e2cf0797d8828348ab73879800bf
 MISC metadata.xml 232 SHA256 1b265602842e5e1049404d1655e9f9bd892e779af9650f5b99cd2ba6a58e23d2 SHA512 21e2171bdf0ec8c3205f5850681969cd9125a2455f92c34f041a073cdc7fe215e036273e8bf99881bb9b6073e2a20bd833f4c5d68bdbff64fc58247a388e0425 WHIRLPOOL 95e7e3980992416728e4b11da1926c107075e1d3c7a7b8bf78be357626d0325f5c84c544dc2c6c6463333a7133f424a90769124b7db63f25fc46a444ab0956c6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlOmDhsACgkQC77qH+pIQ6S3kgD/Slu/qQITijwQgMpG3uCtCgWa
-L+OfJ8t5TQRrV05eqNAA/jPNxtmZ1SbANRDXzkqqpntGaKc+nuPg9LH2LzTcr8xN
-=AxWk
+iEYEAREIAAYFAlPxhZQACgkQso7CE7gHKw1UWACdHij0Vytv1j8OcKSQqsrsOCsK
+XGEAnilGA5eyQHIr8D4o5nnxADMkYcbC
+=DJBq
 -----END PGP SIGNATURE-----
