@@ -4,15 +4,17 @@ Hash: SHA256
 DIST click-2.0.tar.gz 47342 SHA256 33a984fe73aa8c6bf69c38098b69dd38405529db54baf4c8cf64c50b2dee644f SHA512 4c703ab4b5c76e393420b0edf9af9e8ddb301ccfef5f8117d3408eaa8a94abe6b7b5c7a8b61b7774a3b459b153c10438e8934f21ceb73697199828cce2c2887c WHIRLPOOL bf599395245319b31c189df297a1ec35ca69723ed24e2d3e9aa9231a3cfebdb80e1f43a0b010865b6fbecf09f23dc1121cca232aec26f09bdb455f41da5261c4
 DIST click-2.4.tar.gz 155734 SHA256 fe09336d002cb66dac1289808a7023eeffd90a29607bf00f1eda5397a1c0d545 SHA512 bb4c72665edc90d0c06142ff3776308f1eef574bb1b78294eb1c6e4ebe265b9eb1da2220b7f191495e8e6255651f35683e398898a40da16bb6634671bcb763a8 WHIRLPOOL 8f23f8fe0e661b29a6dfd8c55550ed6507755345d39032ace1c594bc664c0b27cdc1813c6be7f7f4756daaa49bc19cf04aabb6f06fbe4ba44c1b3655f2766560
 DIST click-2.5.tar.gz 155708 SHA256 791885554ec2cef9926b4ad69ca2aeb52979fdc7f3520af0203a4e8c548c6428 SHA512 2e2093ce1a240030226a7c80a3ad6e6b7121f0219adf9a241675a0449f6c163eeff64135ec9f39a2330d961fc83110e222f23a1ad7b12ecae7cabbcd40f7bc2b WHIRLPOOL 398f87e6a26ddce64b9fdd5b3cac7f14d3be70700b5d18ab40288be481bc622138f663225edd1c2d34f9d275d12cea12b280b810904715e2bfb6ffcef640f675
+DIST click-3.1.tar.gz 257906 SHA256 e174693d89d4c2914b5f7a04a1fbf55864e4be168267303d156699d1455fe942 SHA512 4515acc8b9b25e43e38e30cd24b1ec82072932a0b465fa1b889930fafb2176e0dd34125171db4f32cc5434f83c8ad0d23822ad291b4cfa667c5936ec34583893 WHIRLPOOL a8ca87fa2f821e9a307c37f61c7e7113154b6984e2b28496a91790f37dcd97fb4ca1224d6a137434fd032303adc7ca959010e370d9e5bae24d526526147a5bd8
 EBUILD click-2.0.ebuild 759 SHA256 1942f1ad9ab89e4301719e5d19ef0b03746d68ef19877f97eae0ab615a0eb2e7 SHA512 b1be1a560abb9c41a656aa449b0547fe4157282a9d62a6006c379878274cf47eb125de7c5e83518213ba951b89af2a32d400f65592c6fcebbe9861e579e7767b WHIRLPOOL 18a7aa2a60a3e05a3e7724fbfe69c07d310abcb9a410cecf0f385aaffcd27f9ddb88ce0aa066889a6a21598cad90c685d9d3a3f7e7d6bb47970b6b70acacb26c
 EBUILD click-2.4.ebuild 1107 SHA256 0c73a8553434d64b45aa2301404d588017ea85dd1f4caff6221d2500ce809474 SHA512 7a8aaf27584552df508a7c1fab671eb452f923fa59ca9e28f5c62591455da18f6027d09fcc5588ff7f080e5ee699b83d7beb371b49dc1073230addd2adf6a15b WHIRLPOOL 0c19d477447bbe196808caa44ee25eff406f2158aa75e95a6695726fe94e23625b51055c5de48b2bc2547f1932879a56f58f0e3a1e7dfd229413faafab167fb3
 EBUILD click-2.5.ebuild 1107 SHA256 90c7885587fae89f5f238b3baad78cb014e528bf47fbd1b0449cb4330232989f SHA512 83a86418dd9ef6aaf40beae7aa5d5cb8a96151f218fb9f4708e8934e334d2aef1e51df227e6690c4b6a28d3a3139bfe8f9abacc2965fab49ae56e23b300c7dae WHIRLPOOL b797dff3eada5bbfee6e70b5bee2024a7719dc32246cf609ce94d320434a0cafcb67e5d51f051448f313f22450a7e26e0e066e4bc6c4ee36d054e203e19b4245
-MISC ChangeLog 790 SHA256 82cf8a3a2db1f3af1feecdae1e7d8e44ab2ea81380a8295c71c0e020aa77ff05 SHA512 a818e4c2c81cce914642b884acf2089ebe4cc339c6acceac59506f0e539eb8833765ef4ff38e87d97b640e03cb7f37278344bef63ab3751f833f221f38464b1b WHIRLPOOL 3dab4d43ec82acbdd742ea7f34ee5f1eb392828898940e4f98928e895790b23762c319615f76fdd66bcc46593f7894a3776b92b5688fca3146ac1daef82f43d7
+EBUILD click-3.1.ebuild 1107 SHA256 72b9141199938ffbd0f7552355f3fee779b4acb7d7cb9b92245ab69066ebf551 SHA512 9035f2a3fe196675045cd40d3ceba5a1a7437a0b1b1b1f47aca68a22aa965c465cda88e3599a742ab9b454b99812af9b953e8fe60b23db8880e05a7095ec2597 WHIRLPOOL d19c42311474d73de1ad828c97a18e486b558a1da236154dec3c029a44cc505163488f9aab67b9ae8caa04e5399b2ddc66d7a99c704923113b5bdb40a28fba69
+MISC ChangeLog 891 SHA256 60794a9eb27de3922da9a5ceb9c72b8964cddd01018952d2727e154b73c8622f SHA512 95c07d3fc08c38b88ee8670a2106780a8165f625cd1ecb18d75117b75b1772f054cdf54ffcf22b082b493b882c2759fefde7f8562933702daa9079913878cfa0 WHIRLPOOL 91596b111d9a68af1374db2d5c76a2c8cfa179dce517ee186e15b72c5319d16617775fdd3c3d49ac41d470b4ac5874df3ced3e176456c82725686420ed6ab08c
 MISC metadata.xml 228 SHA256 3fa918c866e06e5f06d7c83c0292001911f59df4687da67e11e9eccbbe8c0037 SHA512 9961f824bb904d7ca99065d6df54d4e8f1b4c75099c40883b799eabc5cc2765a6b2fa2d88f1ec9fa3aa46f874f76f0b019446a55f249eb0a9b14ee89831a889e WHIRLPOOL be665b1155c03a4cf4a60ff689af695416913015ad3ec3bc78bc89310d747bc103687b354754af44533a86d407a24d03e75bd7d06b40cc5ff2e5dee1354ec7f9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlPhv40ACgkQso7CE7gHKw1yowCdEkfHwbIjeP7beQg+auxqhyVi
-ytAAnjVpagw3wckHVMFVKTFv22JZXTOx
-=Pcys
+iEYEAREIAAYFAlPxh+QACgkQso7CE7gHKw0a/QCfbNRIZk79NIXtrQkZ0n86tCbk
+cugAniudntBmlA/R5+IH9Xg5rRwP46yn
+=A7ug
 -----END PGP SIGNATURE-----
