@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/click
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/click/ChangeLog,v 1.4 2014/08/06 05:48:13 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/click/ChangeLog,v 1.5 2014/08/18 05:07:03 idella4 Exp $
+
+*click-3.1 (18 Aug 2014)
+
+  18 Aug 2014; Ian Delaney <idella4@gentoo.org> +click-3.1.ebuild:
+  bump
 
 *click-2.0 (06 Aug 2014)
 
